5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1577_2896.log
== TEST (2019-03-21 18:08:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("leia o nome")

# Impressao de saidas
print()
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:09:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("leia o nome.")

# Impressao de saidas
print(imprima esse nome)
-- ERROR:
File "XXXX", line 7
    print(imprima esse nome)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:09:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("leia o nome.")

# Impressao de saidas
print("imprima esse nome")
-- OUTPUT:
imprima esse nome
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:09:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("leia o nome.")

# Impressao de saidas
print("imprima esse nome")
-- EXECUTION TIME:
0.151506
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
imprima esse nome
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
imprima esse nome
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:10:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("leia o nome.")

# Impressao de saidas print(var)
print("imprima esse nome")
-- OUTPUT:
imprima esse nome
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:11:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("leia o nome.")

# Impressao de saidas print(var)
print("imprima esse nome")
-- EXECUTION TIME:
0.130965
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
imprima esse nome
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
imprima esse nome
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:11:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("leia o nome.")

# Impressao de saidas print(var)
print("leia o nome.")
-- OUTPUT:
leia o nome.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:11:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("leia o nome.")

# Impressao de saidas print(var)
print("leia o nome.")
-- EXECUTION TIME:
0.133835
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
leia o nome.
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
leia o nome.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:12:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("leia o nome.")

# Impressao de saidas print(var)
print(var)
-- EXECUTION TIME:
0.17404
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
